# psrkwrap

./: .gitignore  LICENSE  MANIFEST.in  Q_values.ipynb  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
psrk/: __init__.py  fit_mathias_copeman.py  install.py  psrk.py
psrk/julia/: mathiascopeman.jl  psrkfull.jl
psrk/julia/database/: PSRK_groups.csv  ReidIdeal.csv  SAFTgammaMie_groups.csv  constant_translation.csv  critical.csv  mathiascopeman.csv  molarmass.csv
tests/: test_psrk.py
tutorial_clapeyron/call_julia_from_py/: calling_julia.ipynb
utils/: fit_mathias_copeman.ipynb  fit_reid_ideal.ipynb  fit_v_shift.ipynb  flash.ipynb
